--- a/public/css/prodList.css
+++ b/public/css/prodList.css
@@ -10,10 +10,8 @@
 .new-rect { background: url(../images/idx-03.png); width: 69px; height: 38px; color: #333; padding-right: 5px; left: -3px; font-size: 1.2em; }
 .item-price-container { background: url(../images/idx-04.gif); }
 .item-image-container .item-price-container { font: 100 1.3em Helvetica, Microsoft JhengHei, "微軟正黑體"; width: 85px; height: 85px; }
-.item-image-container .item-price-container .item-price { margin-top: 0px; font-size: 1.1em; line-height: 85px; }
+.item-image-container .item-price-container .item-price { margin-top: 0px; font-size: 1.1em; line-height: 85px; margin-top: 30px\0;}
 /*圖片*/
-.item-image-container figure img { /* [disabled]max-height:225px!important;
-*/ }
 .item:hover > .item-image-container .item-image { visibility: visible; opacity: 1;
 }
 /*文字*/
