--- a/app/views/admin/common/_show_document_by_type.html.erb
+++ b/app/views/admin/common/_show_document_by_type.html.erb
@@ -3,10 +3,10 @@
 <%# target: object %>
 <%# type: gallery type %>
 
-<div class="form">
+
   <table width="100%" border="0" cellspacing="0" cellpadding="0">
     <tr>
-      <td width="7%"><%= target_title %>：</td>
+      <td width="7%">圖片：</td>
       <td width="93%">
         <div class="thumb">
           <% target.galleries.select{ |v| v['type'] == type }.each do |attach| %>
@@ -17,4 +17,3 @@
       </td>
     </tr>
   </table>
-</div>
