--- a/app/views/admin/communities/index.html.erb
+++ b/app/views/admin/communities/index.html.erb
@@ -8,7 +8,7 @@
       <!-- Peditor<img src="/images/admin/add.png"> -->
     <%# end %>
     <%= link_to admin_communities_path(type: "CustomizedCommunity"), :method => :post , class:"right highlight" do %>
-      New<img src="/images/admin/add.png">
+      新增文章<img src="/images/admin/add.png">
     <% end %>
   </div>
   <div class="list">
