--- a/app/views/admin/products/out_of_stock.html.erb
+++ b/app/views/admin/products/out_of_stock.html.erb
@@ -6,34 +6,33 @@
   </nav>
 </header>
 
-<article>
-  
+<article>  
   <% Category.where(depth: 1).each do |category| %>
-    == <%= category.name %> ==<br>
-    <% sub_cates = category.children %>  
-    <% sub_cates.each do |cate| %>
-      
-      <div class="list">
-        <table width="100%" border="0" cellspacing="0" cellpadding="0">
-          <% cate.products.each do |product| %>
-            <% unless check_with_stock(product) %>
-            <tr>
-              <td>
-              CATEGORY:<%= product.category.name %>
-              PRODUCT NAME:<%=link_to product.name, admin_category_product_stocks_path(product.category,product) %> = <%= product.en_name %>
-              </td>
-            </tr>
-            <% end %>
-          <% end %>
-        </table>
-      </div>
-
+  <% sub_cates = category.children %>  
+  <% sub_cates.each do |cate| %>      
+  <div class="list">
+    <table width="100%" border="0" cellspacing="0" cellpadding="0">
+      <tr>
+        <td width="5%" class="icon"><img src="/images/admin/folder.png"></td>
+        <td width="15%"><%= category.name %></td>
+        <td width="80%"></td>
+      </tr>
+      <% cate.products.each do |product| %>
+      <% unless check_with_stock(product) %>
+      <tr>
+        <td>├</td>
+        <td class="icon"><img src="/images/admin/folder.png"> <%= product.category.name %></td>
+        <td><%=link_to product.name, admin_category_product_stocks_path(product.category,product) %></td>
+      </tr>
     <% end %>
-    <hr>
+    <% end %>
+    </table>
+  </div>
   <% end %>
-  <div class='button'>
+  <% end %>
+  <!--div class='button'>
     <%= link_to admin_categories_path, class: 'left' do %>
       <img src="/images/admin/left.png">返回
     <% end %>
-  </div>
+  </div-->
 </article>
