--- a/app/views/admin/topic_collections/edit.html.erb
+++ b/app/views/admin/topic_collections/edit.html.erb
@@ -1,114 +1,61 @@
 <header>
   <h2 class="left"><span>首頁管理 / </span>系列主題</h2>
-  <nav class="left">
-    <%= "此系列主題限制關聯主題數：#{@topic_collection.limit}, 已關聯主題數：#{@topic_collection.topic_collection_topicships.count}" %>
-  </nav>
+  <nav class="left"> <%#= "此系列主題限制關聯主題數：#{@topic_collection.limit}, 已關聯主題數：#{@topic_collection.topic_collection_topicships.count}" %> </nav>
 </header>
-
 <article>
-  <div class="hgroup">
-    <%= form_for(@topic_collection, :url => admin_topic_collection_path(@topic_collection), html: { id: "patchthistopic_collection" , :multipart => true } ) do |f| %>
-        <div class="right">顯示 <%= f.check_box :status, { class: 'checkbox'  }, "enable", "disable" %>
-        </div>
-      </div>
+  <div class="hgroup"> <%= form_for(@topic_collection, :url => admin_topic_collection_path(@topic_collection), html: { id: "patchthistopic_collection" , :multipart => true } ) do |f| %>
+    <div class="right">顯示 <%= f.check_box :status, { class: 'checkbox'  }, "enable", "disable" %> </div>
+  </div>
   <div class="form">
-    
-      <table width="100%" border="0" cellspacing="0" cellpadding="0">
-        <tr>
-          <td width="7%">名稱：</td>
-          <td width="31%">
-           <%= f.text_field :name , class: 'text' %>
-          </td>
-          <td width="2%">&nbsp;</td>
-          <td width="7%">&nbsp;</td>
-          <td width="53%">
-             
-          </td>
-        </tr>
-      </table>
+    <table width="100%" border="0" cellspacing="0" cellpadding="0">
+      <tr>
+        <td width="7%">名稱：</td>
+        <td width="93%"><%= f.text_field :name , class: 'text' %></td>
+      </tr>
+    </table>
     <% end %>
   </div>
-
-  <div class="button">
-    <%= link_to image_tag("/images/admin/left.png")+"返回", admin_topic_collections_path(), class: "left" %>
-    <a href="javascript: document.getElementById('patchthistopic_collection').submit();" id="sendtheform" class="right highlight" data-no-turbolink = true >變更
-      <img src="<%= image_path("/images/admin/up.png") %>">
-    </a>
-  </div>
-
-</article>  
-<br>
-
-<% if @topic_collection.topic_collection_topicships.count < @topic_collection.limit %>
-  <article>
-    <%= form_for(@topic_collection_topicship, :url => admin_topic_collection_topicships_path(), html: { id: "newthistopic_collection_topicship" } ) do |f| %>
-      <table width="100%" border="0" cellspacing="0" cellpadding="0">
-        <tr>
-          <td width="7%">新增關聯主題：</td>
-          <td width="31%">
-          <% unless @topics.count == 0 %>
-            <%= f.select :topic_id, options_for_select(@topics.collect { |topic|
+  <% if @topic_collection.topic_collection_topicships.count < @topic_collection.limit %>
+  <div class="form"> <%= form_for(@topic_collection_topicship, :url => admin_topic_collection_topicships_path(), html: { id: "newthistopic_collection_topicship" } ) do |f| %>
+    <table width="100%" border="0" cellspacing="0" cellpadding="0">
+      <tr>
+        <td width="12%">選擇主題：</td>
+        <td width="87"><% unless @topics.count == 0 %>
+          <%= f.select :topic_id, options_for_select(@topics.collect { |topic|
       [topic.name, topic.id] }, @topic_collection_topicship.topic_id), {}, { id: 'topic_select' } %>
           <% else %>
-            無主題可供選擇
-          <% end %>
-          </td>
-          <td width="2%">&nbsp;</td>
-          <td width="7%">&nbsp;</td>
-          <td width="53%"><%= f.hidden_field :topic_collection_id, value: @topic_collection.id %></td>
-        </tr>
-        <tr>
-          <td valign="top">&nbsp;</td>
-          <td colspan="4">&nbsp;</td>
-        </tr>
-      </table>
+          無主題可供選擇
+          <% end %></td>
+        <td width="1%"><%= f.hidden_field :topic_collection_id, value: @topic_collection.id %></td>
+      </tr>
+    </table>
     <% end %>
-
-    <div class="button">
-      <%= link_to image_tag("/images/admin/left.png")+"返回", admin_topic_collections_path(), class: "left" %>
-      <a href="javascript: document.getElementById('newthistopic_collection_topicship').submit();" id='new_topic_collection_topicship' class="right highlight" data-no-turbolink = true >新增主題
-        <img src="<%= image_path("/images/admin/up.png") %>">
-      </a>
-    </div>
-
-  </article>
-<% end %>
-  
-  
-  <article>
-  刪除關聯主題：
-    <div class="list">
-      <table width="100%" border="0" cellspacing="0" cellpadding="0">
-        <% @topic_collection.topic_collection_topicships.each do |ship| %>
-          <tr>
-            <td width='88%'>
-              <%= Topic.find(ship.topic_id).name %>
-            </td>
-            <td>
-              <div class='tool'>
-              <%= link_to '', admin_topic_collection_topicship_path(ship.id), method: :delete, data: { confirm: 'Are you sure?' }, class: 'delete', title: '刪除' %>
-              </div>
-            </td>
-          </tr>
-        <% end %>    
-      </table>
-    </div>
-  </article>
-
-  
-  <article>
-    已關聯商品列表：
-    <div class="list">
-      <table width="100%" border="0" cellspacing="0" cellpadding="0">
-        <% @topic_collection.topics.each do |topic| %>
-          <% topic.products.each do |product| %>
-          <tr>
-            <td>
-              <%=topic.name%><%= product.name %> = <%= product.price %> / <%= product.price_for_sale %>
-            </td>
-          </tr>
-          <% end %>
-        <% end %>    
-      </table>
-    </div>
-  </article>
+  </div>
+  <div class="button"> <%#= link_to image_tag("/images/admin/left.png")+"返回", admin_topic_collections_path(), class: "left" %> <a href="javascript: document.getElementById('newthistopic_collection_topicship').submit();" id='new_topic_collection_topicship' class="right highlight" data-no-turbolink = true >加入 <img src="<%= image_path("/images/admin/down.png") %>"> </a> </div>
+  <% end %>
+  <div class="hgroup">
+    <h3>關聯主題</h3>
+  </div>
+  <div class="list">
+    <table width="100%" border="0" cellspacing="0" cellpadding="0">
+      <% @topic_collection.topic_collection_topicships.each do |ship| %>
+      <tr>
+        <td colspan="2" class="icon"><img src="/images/admin/folder.png"> <%= Topic.find(ship.topic_id).name %></td>
+        <td width="18%"><div class='tool'> <%= link_to '', admin_topic_collection_topicship_path(ship.id), method: :delete, data: { confirm: 'Are you sure?' }, class: 'delete', title: '刪除' %> </div></td>
+      </tr>
+      <% end %>
+      <% @topic_collection.topics.each do |topic| %>
+      <% topic.products.each do |product| %>
+      <tr>
+        <td width="5%" class="icon">├</td>
+        <td width="75%"><%= product.name %><%#= product.price %><%#= product.price_for_sale %></td>
+        <td></td>
+      </tr>
+      <% end %>
+      <% end %>
+    </table>
+  </div>
+  <% if @topic_collection.topic_collection_topicships.count >= @topic_collection.limit %>
+  <div class="button"> <%= link_to image_tag("/images/admin/left.png")+"返回", admin_topic_collections_path(), class: "left" %> <a href="javascript: document.getElementById('patchthistopic_collection').submit();" id="sendtheform" class="right highlight" data-no-turbolink = true >儲存 <img src="<%= image_path("/images/admin/save.png") %>"> </a> </div>
+  <% end %>
+</article>
